---
title: The IO layer — one note read and written
---
classDiagram
  direction TB

  class BaseIO~Fields, Edit, Note~ {
    <<abstract>>
    +filePath
    +fill(fields)
    +attachNote(model) / attach(model) / detach(model)
    +owe(key, edit)
    +flush()
    +writeCard(card)
    +isDirty
    #note: Note
    #writeOwed(owed)*
    #markStale()
  }

  class ListingModel~Fields~ {
    <<interface>>
    +listing: ChildBox[]
    +listingWritten(boxes)
  }

  class ListingIO~Fields, Edit~ {
    <<abstract>>
    +readListing(cache)
    +syncChildBoxes()
    +markVerified()
    +addChild() / removeChild()
    +syncChildListing(children)
    #childSection*
    #childFolder*
  }

  class ProjectIO {
    +delete()
    childSection = ## Tasks
  }

  class ProjectTaskIO {
    +update(data)
    +ensureListed()
    +applyParentBox(checked)
    +stampCompleted()
    +markOrphaned() / clearOrphanMark() / detachFromParent()
    childSection = ## Subtasks
  }

  class TaskIO {
    +read() / parsedTasks()
    +tasks(): KeyedTask[]
    +taskFor(key)
    +originalKey(key)
    +owePass(key, kind, edit)
    -owedNow(key, kind, mutate)
    -pass(mutate)
    +addLine() / removeLine()
    +setLineScheduled() / moveLineBefore()
    +insertUnderHeading()
    +withLineChecked() / withoutLine()
  }

  class lineAlgebra["line algebra"] {
    <<in task-io.ts>>
    +parseTasksFromLines(lines, path)
    +withTaskAdded() / withoutTask()
    +withChecked() / withTitleSet()
    +withGroupUnderHeading()
    +withTaskMovedBefore()
  }

  note for BaseIO "Fields — what this kind of note parses to, its whole reading, held by the model and not here<br/>Edit — one change owed to the vault, gathered by owe() and applied by writeOwed()<br/>Note — the model this hands each reading to"

  note for ListingIO "Fields — a reading carrying a listing (ListingFields)<br/>Edit — passed through to BaseIO, field edits by default"

  BaseIO <|-- ListingIO : Note = ListingModel
  BaseIO <|-- TaskIO : Fields = TaskIOFields, Edit = LineEdit
  ListingIO <|-- ProjectIO : Fields = ProjectFields
  ListingIO <|-- ProjectTaskIO : Fields = ProjectTaskFields

  BaseIO ..> NoteModel : hands each reading to
  BaseIO ..> IModel : wakes the models attached
  NoteModel <|.. ListingModel
  ListingIO ..> ListingModel : asks what it lists
  ListingIO ..> ProjectTaskIO : registers a child through
  TaskIO ..> lineAlgebra : what to make of the lines it read
  TaskIO "1" --> "*" Task : keys a line to
